# FBRef-Scraper

./: .gitignore  README.md  event_data_scraper.py  fbref.py  gha-creds-38a282c8e1678c2f.json  logs_to_stats.json  pyproject.toml  requirements.txt  scraper.py  stats_scraper.py  test.py  utils.py
.github/workflows/: scrape test.yaml  scrape.yaml  scrape_67.yaml  scrape_big5.yaml  scrape_big5_fbref.yaml  scrape_event_data.yaml  scrape_fbref.yaml
data/: 2023_against.csv  2023_against_gks.csv  2023_players_gks.csv  2023_squad.csv  2023_squad_gks.csv  2023_squad_logs.csv
data/cache/: fbref_links.txt  whoscored_links.txt
data/lookup/: eventtypes.csv  formation.csv
engines/: WhoScored.py  fbref.py  request_utils.py
old/: stats_scraper.py
utils/: bq_utils.py  data_utils.py  request_utils.py  types.py
