[project]
name = "github-actions-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-bigquery>=3.35.0",
    "html5lib>=1.1",
    "rapidfuzz>=3.13.0",
    "scraperfc>=3.3.0",
    "selenium-stealth>=1.0.6",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
